# azure-bicep-starter-project

./: .gitignore  README.md  main.bicep
HttpTrigger1/: Cargo.toml
HttpTrigger1/src/: main.rs
