[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { path = "/home/auxyria/azure-sdk-for-rust/sdk/core", version = "0.3" }
azure_data_cosmos = { path = "/home/auxyria/azure-sdk-for-rust/sdk/data_cosmos", version = "0.4.0" }
clap = { version = "3.2.16", features = ["derive", "env"] }
futures = "0.3"
serde = "1.0.142"
serde_json = "1.0"
time = "0.3.10"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
warp = "0.3"

[features]
into_future = []